# gabbro

./: .gitignore  .metadata  CHANGELOG.md  LICENSE  README.md  gabbro_test  pubspec.yaml
.github/: FUNDING.yml
android/: build.gradle.kts  gradle.properties
android/app/: build.gradle.kts  gradle.lockfile  proguard-rules.pro
challenge/: README.md  decryptMe_2026-06-01.gabbro  decryptMe_2026-06-01.gabbro.sha256  decryptMe_2026-06-07.gabbro  decryptMe_2026-06-07.gabbro.sha256  decryptMe_2026-06-26.gabbro  decryptMe_2026-06-26.gabbro.sha256  decryptMe_2026-07-07.gabbro  decryptMe_2026-07-07.gabbro.sha256  decryptMe_2026-07-08.gabbro  decryptMe_2026-07-08.gabbro.sha256  decryptMe_2026-07-11.gabbro  decryptMe_2026-07-11.gabbro.sha256
docs/: AI_AUTHORSHIP_AND_IP.md  AI_DEVELOPMENT_PROCESS.md  AI_SECURITY_AUDIT.md  AI_SECURITY_AUDIT_3.md  AI_SECURITY_AUDIT_REVIEW.md  ARCHITECTURE.md  AUTOTYPE_AND_AUTOFILL.md  BUILD_AND_RELEASE.md  LEARNINGS.md  MAINTENANCE.md  PHASE2_OVERFLOW_COVERAGE.md  R03_REMEDIATION_PLAN.md  RT3_CLEANUP.md  SECURITY.md  VAULT_SYNC.md  VAULT_UPGRADE_PATH.md
docs/artefacts/: ADR-013-hardware-test-matrix.md  gabbro_crypto_stack_flow.dot  safe_edit_wireframe_v3.html  screens_3_4_v3.html  (+2 more)
integration_test/: entry_edit_test.dart  rust_lib_setup.dart  simple_test.dart  vault_corruption_test.dart  vault_delete_routing_test.dart  vault_session_test.dart
ios/Runner/: Info.plist
lib/: app_paths.dart  autofill_unlock_main.dart  autotype_listener.dart  autotype_target.dart  clipboard_clear.dart  control_scale.dart  gabbro_contrast.dart  main.dart  nfc_capability.dart  safe_file_picker.dart  settings.dart  text_scale.dart  vault_registry.dart
linux/: CMakeLists.txt
rust/: Cargo.toml  deny.toml
rust/.cargo/: config.toml
rust/assets/: wordlist_bg.txt  wordlist_cs.txt  wordlist_da.txt  wordlist_el.txt  wordlist_et.txt  wordlist_fi.txt  wordlist_fr.txt  wordlist_hr.txt  wordlist_hu.txt  wordlist_kk.txt  wordlist_lt.txt  wordlist_lv.txt  wordlist_nb.txt  wordlist_pl.txt  wordlist_ru.txt  wordlist_sk.txt  wordlist_sl.txt  wordlist_sv.txt  wordlist_uk.txt  wordlist_zh_cn.txt
rust/examples/: gen_fixtures.rs
rust/scripts/: gen_wordlists.py  mem_forensics.sh
rust/src/: frb_generated.rs  hardening.rs  lib.rs
rust/src/api/: autofill_bridge.rs  autotype_bridge.rs  entropy.rs  fido_bridge.rs  import.rs  mod.rs  passphrase_generator.rs  password_generator.rs  simple.rs  types.rs  vault.rs  vault_bridge.rs
rust/src/autotype/: fill.rs  inject.rs  keysym.rs  mod.rs  sequence.rs  trigger.rs  window.rs
rust/src/crypto/: aes_gcm.rs  hkdf.rs  kdf.rs  keypair.rs  ml_kem.rs  mod.rs  vault_crypto.rs
rust/src/fido/: device.rs  mod.rs
rust/src/import/: bitwarden.rs  csv.rs  dashlane.rs  enpass.rs  fuzz_tests.rs  google_pm.rs  mod.rs
rust/src/vault/: entry.rs  file_format.rs  io.rs  mod.rs  serialization.rs  session.rs
rust/tests/: crash_safety.rs  vault_backward_compat.rs  vault_parse_fuzz.rs  vault_state_machine_fuzz.rs
rust/tests/fixtures/: FIXTURES.md  fixture_spec.rs
rust/tests/fixtures/vaults/: v10_multikey_2keys.gabbro  v10_passphrase.gabbro  v11_multikey_2keys.gabbro  v11_passphrase.gabbro  v6_multikey_2keys.gabbro  v6_passphrase.gabbro  v7_multikey_2keys.gabbro  v7_passphrase.gabbro  v8_multikey_2keys.gabbro  v8_passphrase.gabbro  v9_multikey_2keys.gabbro  v9_passphrase.gabbro
rust_builder/: pubspec.yaml
test/: a11y_net_test.dart  about_screen_test.dart  alphabet_index_bar_test.dart  app_paths_test.dart  appearance_screen_test.dart  autofill_save_app_test.dart  autofill_unlock_app_test.dart  autofill_unlock_screen_test.dart  autotype_listener_test.dart  autotype_picker_test.dart  autotype_target_test.dart  change_passphrase_screen_test.dart  clipboard_clear_test.dart  control_scale_test.dart  create_entry_screen_prefill_test.dart  create_entry_screen_test.dart  csv_mapping_screen_test.dart  entry_detail_screen_test.dart  error_l10n_net_test.dart  export_screen_test.dart  fallback_localizations_test.dart  flutter_test_config.dart  gabbro_logo_test.dart  generator_screen_test.dart  generator_widget_test.dart  help_screen_test.dart  import_failures_dialog_test.dart  import_screen_test.dart  import_skipped_dialog_test.dart  l10n_test.dart  language_screen_test.dart  locale_resolution_test.dart  lock_timer_test.dart  main_navigation_test.dart  manage_folders_screen_test.dart  manage_vaults_screen_test.dart  manage_yubikeys_screen_test.dart  nfc_capability_test.dart  onboarding_alias_test.dart  onboarding_screen_test.dart  (+44 more)
test_data/: bitwarden_valid.json  bitwarden_with_invalid.json  dashlane_valid.csv  dashlane_with_edge_cases.csv  enpass_valid.json  enpass_with_invalid.json  google_valid.csv  google_with_edge_cases.csv  passwords_valid.csv  passwords_with_invalid.csv
windows/: CMakeLists.txt
(+243 files in other folders)
