[package]
name = "rust_lib_gabbro"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
flutter_rust_bridge = "=2.12.0"
hkdf = "0.13.0"
ml-kem = "0.2.3"
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
uuid = { version = "1.23.0", features = ["v4"] }
x25519-dalek = { version = "2.0.1", features = ["reusable_secrets"] }
once_cell = "1"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
base64 = "0.22.1"
[target.'cfg(not(target_os = "android"))'.dependencies]
libfido2-sys = "0.5.1"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", features = ["invocation"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[dev-dependencies]
serial_test = "3"
tokio = { version = "1", features = ["rt", "macros"] }
