[package]
name = "rust_lib_gabbro"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

# rlib is additive (cdylib/staticlib FFI outputs unchanged); it lets in-package
# bins/tests — e.g. the `forensics` harness — link the lib as a Rust crate.
[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
flutter_rust_bridge = "=2.12.0"
hkdf = "0.13.0"
indexmap = { version = "2", features = ["serde"] }
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
sha2 = "0.11.0"
thiserror = "1"
uuid = "1.23.0"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
base64 = "0.22.1"
# Optional, only for the `forensics` feature (memory self-test harness — not in normal builds).
libc = { version = "0.2", optional = true }

# Memory-forensics self-test (audit L-6 / Appendix C item 6): validate that secrets
# are scrubbed from process memory on lock. Build with `--features forensics`.
[features]
forensics = ["dep:libc"]

[[bin]]
name = "mem_forensics"
path = "src/bin/mem_forensics.rs"
required-features = ["forensics"]

[target.'cfg(not(target_os = "android"))'.dependencies]
libfido2-sys = "0.5.1"

# Linux desktop auto-type (ADR-017): X11 keystroke injection via XTEST. Pure-Rust
# backend (no system X library linked). Linux-only, so Android never pulls it.
[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["xtest"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", features = ["invocation"] }

# Core-dump hardening (R-04, Linux only) uses prctl/setrlimit; the symlink-safe
# vault writer (S-04, O_NOFOLLOW) runs on every unix target incl. Android. libc
# is already a transitive dependency of every build (via flutter_rust_bridge,
# rand, the crypto crates); this just lets our code call it directly on unix.
# No net supply-chain addition.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[dev-dependencies]
serial_test = "3"
tokio = { version = "1", features = ["rt", "macros"] }
